--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Custom Ignored Folders
+API_ManageGYM/
+.trae/
+Plan Mobille.txt
